# boilerplate-backend-python

./: .env  Dockerfile  main.py  pyproject.toml  requirements.txt
app/: main.py
app/configurations/: __init__.py  cors.py  database.py
app/models/: __init__.py  image.py
app/models/schema/: __init__.py  images.py  user.py
app/routers/: image_routers.py  user_routes.py
app/services/: __init__.py  image_services.py  user_services.py
app/utilities/: __init__.py
configurations/: cors.py
models/: user.py
routers/: user_routes.py
services/: __init__.py  user_services.py
temp_folder/dependencies/email_validator-2.2.0.dist-info/: RECORD
temp_folder/dependencies/fastapi_cli-0.0.4.dist-info/: RECORD
temp_folder/dependencies/gotrue-2.5.4.dist-info/: RECORD
temp_folder/dependencies/httpx-0.27.0.dist-info/: RECORD
temp_folder/dependencies/markdown_it_py-3.0.0.dist-info/: RECORD
temp_folder/dependencies/pygments-2.18.0.dist-info/: RECORD
temp_folder/dependencies/python_dotenv-1.0.1.dist-info/: RECORD
temp_folder/dependencies/rsa-4.9.dist-info/: RECORD
temp_folder/dependencies/supabase-2.5.1.dist-info/: RECORD
temp_folder/dependencies/typer-0.12.3.dist-info/: RECORD
temp_folder/dependencies/uvicorn-0.30.1.dist-info/: RECORD
temp_folder/dependencies/watchfiles-0.22.0.dist-info/: RECORD
