[tool.poetry]
name = "figma-backend"
version = "0.1.0"
description = ""
authors = ["Hypercodding <mohammadhammad302@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
